--- a/app/assets/stylesheets/build_navigation.css
+++ b/app/assets/stylesheets/build_navigation.css
@@ -1,5 +1,5 @@
 .build-menu {
-  padding: 20px 0 0 10px;
+  padding: 20px 0 0 15px;
   background-color: #EEE;
   border-top: 2px solid #999;
 }
