--- a/app/assets/stylesheets/run_navigation.css
+++ b/app/assets/stylesheets/run_navigation.css
@@ -5,7 +5,7 @@
 
 ul.run-menu {
   text-align: center;
-  padding: 8px 0 0 10px;
+  padding: 8px 0 0 15px;
 }
 
 ul.run-menu li {
